RESOLVED FIXED223134
REGRESSION (r274308): Two assertions in JSGlobalObject::defineOwnProperty() are failing
https://bugs.webkit.org/show_bug.cgi?id=223134
Summary REGRESSION (r274308): Two assertions in JSGlobalObject::defineOwnProperty() a...
WebKit Commit Bot
Reported 2021-03-12 12:48:07 PST
https://trac.webkit.org/changeset/274308 broke the build: Caused assertion failure with JSC tests This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of r274308 (40.73 KB, patch)
2021-03-12 12:48 PST, WebKit Commit Bot
no flags
Patch (4.35 KB, patch)
2021-03-12 14:36 PST, Alexey Shvayka
ysuzuki: review+
ews-feeder: commit-queue-
WebKit Commit Bot
Comment 1 2021-03-12 12:48:18 PST
Created attachment 423074 [details] REVERT of r274308 Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2 2021-03-12 12:52:06 PST
commit-queue failed to commit attachment 423074 [details] to WebKit repository. To retry, please set cq+ flag again.
Alexey Shvayka
Comment 3 2021-03-12 14:36:56 PST
Yusuke Suzuki
Comment 4 2021-03-13 17:59:58 PST
Comment on attachment 423084 [details] Patch r=me
Alexey Shvayka
Comment 5 2021-03-14 15:18:48 PDT
Radar WebKit Bug Importer
Comment 6 2021-03-14 15:19:14 PDT
Alexey Shvayka
Comment 7 2021-03-14 15:20:17 PDT
(In reply to Yusuke Suzuki from comment #4) > Comment on attachment 423084 [details] > Patch > > r=me Thanks!
Note You need to log in before you can comment on or make changes to this bug.