REGRESSION (r274308): Two assertions in JSGlobalObject::defineOwnProperty() are failing https://bugs.webkit.org/show_bug.cgi?id=223134

Reviewed by Yusuke Suzuki.

This patch:

1. Simplifies exception check after validateAndApplyPropertyDescriptor() as it
   conditionally throws on failure.
2. Creates new SymbolTableEntry when global variable is redefined as read-only
   because setAttributes() performs pack(), which doesn't support fat entries.

Due to #2, symbolTableGet() overload is simplified to return fast entry, and
setAttributes() is removed as unused.

* runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::defineOwnProperty):
* runtime/JSSymbolTableObject.h:
(JSC::symbolTableGet):
* runtime/SymbolTable.h:
(JSC::SymbolTableEntry::getAttributes const):
(JSC::SymbolTableEntry::setAttributes): Deleted.


Canonical link: https://commits.webkit.org/235273@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274406 268f45cc-cd09-0410-ab3c-d52691b4dbfc